--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
     android:id="@+id/view"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
@@ -26,24 +26,24 @@
             <TextView
                 android:id="@+id/stationsName"
                 android:layout_width="0dp"
-                android:layout_height= "wrap_content"
-                android:text="SationsName"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
                 android:paddingStart="16dp"
                 android:paddingTop="8dp"
                 android:paddingBottom="8dp"
+                android:text="SationsName"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                android:layout_marginBottom="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/descStations"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingBottom="8dp"
                 android:paddingLeft="16dp"
+                android:paddingBottom="8dp"
                 android:text="Beschreibung"
                 app:layout_constraintStart_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/stationsName" />
@@ -57,17 +57,17 @@
                 android:background="@drawable/ic_keyboard_arrow_down_black_24dp"
                 app:layout_constraintBottom_toBottomOf="@+id/descStations"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/stationsName"/>
+                app:layout_constraintTop_toTopOf="@id/stationsName" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/expandLayout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:visibility="visible"
-                app:layout_constraintTop_toBottomOf="@id/descStations"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent">
+                app:layout_constraintTop_toBottomOf="@id/descStations">
 
                 <TextView
                     android:id="@+id/dieselPreis"
@@ -119,9 +119,9 @@
                     android:layout_marginTop="16dp"
                     android:layout_marginBottom="16dp"
                     android:text="Preis Super: "
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/e10Preis"
-                    app:layout_constraintBottom_toBottomOf="parent" />
+                    app:layout_constraintTop_toBottomOf="@id/e10Preis" />
 
                 <TextView
                     android:id="@+id/superPreisNumber"
